--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Coming Soon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      background-color: #001f3f; /* Navy Blue */
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      max-width: 90%;
+    }
+
+    .links a {
+      display: inline-block;
+      margin: 0 10px;
+      color: white;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: opacity 0.3s ease;
+    }
+
+    .links a:hover {
+      opacity: 0.7;
+    }
+  </style>
+</head>
+<body>
+  <h1>Currently working on my website. Please stay tuned!</h1>
+  <div class="links">
+    <a href="https://twitter.com/yourhandle" target="_blank">Twitter</a>
+    <a href="https://linkedin.com/in/yourhandle" target="_blank">LinkedIn</a>
+    <a href="https://github.com/yourhandle" target="_blank">GitHub</a>
+    <!-- Add more links if needed -->
+  </div>
+</body>
+</html>
