--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background-color: #001f3f; /* Navy Blue */
+      background-color: #001f3f; /* Navy blue */
       color: white;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
       text-align: center;
+      height: 100vh;
     }
 
     h1 {
@@ -25,12 +25,16 @@
       max-width: 90%;
     }
 
+    .links {
+      margin-top: 1rem;
+    }
+
     .links a {
-      display: inline-block;
-      margin: 0 10px;
+      display: block;
       color: white;
       text-decoration: none;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      margin: 10px 0;
       transition: opacity 0.3s ease;
     }
 
@@ -41,11 +45,13 @@
 </head>
 <body>
   <h1>Currently working on my website. Please stay tuned!</h1>
+
   <div class="links">
-    <a href="https://twitter.com/yourhandle" target="_blank">Twitter</a>
-    <a href="https://linkedin.com/in/yourhandle" target="_blank">LinkedIn</a>
-    <a href="https://github.com/yourhandle" target="_blank">GitHub</a>
-    <!-- Add more links if needed -->
+    <a href="https://instagram.com/raymond_oscar" target="_blank">Instagram</a>
+    <a href="https://instagram.com/kreatif3d.id" target="_blank">Kreatif 3D Instagram</a>
+    <a href="https://youtube.com/@raymondoscarlim" target="_blank">YouTube</a>
+    <a href="https://www.linkedin.com/in/im-raymond-lim/" target="_blank">LinkedIn</a>
+    <a href="https://open.spotify.com/user/21gsqg6x7zdxwvqyhvctupwvi?si=7b0dc3852e7a4712" target="_blank">Spotify</a>
   </div>
 </body>
 </html>
