--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>Currently working on my website. Please stay tuned!</h1>
+  <h1>Currently working on my website. Please stay tuned! 🙏</h1>
 
   <div class="links">
     <a href="https://instagram.com/raymond_oscar" target="_blank">Instagram</a>
