--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </a>
     </div>
     <div class="social-block">
-      <a href="https://youtube.com/@raymond_oscar" target="_blank">
+      <a href="https://youtube.com/@raymondoscarlim" target="_blank">
         <div class="social-title">YouTube</div>
         <i class="fab fa-youtube"></i>
       </a>
@@ -101,7 +101,7 @@
       </a>
     </div>
     <div class="social-block">
-      <a href="https://spotify.com/yourprofile" target="_blank">
+      <a href="https://open.spotify.com/user/21gsqg6x7zdxwvqyhvctupwvi?si=ebc6f2916ae04fa1" target="_blank">
         <div class="social-title">Spotify</div>
         <i class="fab fa-spotify"></i>
       </a>
