--- a/index.html
+++ b/index.html
@@ -5,45 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
 
-  <!-- Adobe Fonts (Neue Haas Grotesk Display Pro, fallback to sans-serif) -->
-  <link rel="stylesheet" href="https://use.typekit.net/xyz123.css"> <!-- Replace with actual Adobe Fonts link -->
+  <!-- Replace this link with your Adobe Fonts embed for Neue Haas Grotesk -->
+  <link rel="stylesheet" href="https://use.typekit.net/xyz123.css"> 
   <style>
-    body {
+    /* Global Reset */
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: "neue-haas-grotesk-display", sans-serif;
+      padding: 0;
     }
 
+    body {
+      font-family: "neue-haas-grotesk-display", sans-serif;
+      background-color: #fff;
+      color: #000;
+    }
+
+    /* Header */
     header {
-      background-color: #f5f5f5;
-      padding: 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #f5f5f5;
+      padding: 20px 40px;
+      flex-wrap: nowrap;
     }
 
     .logo {
       font-size: 28px;
       font-weight: bold;
-      margin-left: 20px;
     }
 
     nav {
-      margin-right: 20px;
+      display: flex;
+      gap: 30px;
     }
 
     nav a {
-      margin-left: 30px;
       text-decoration: none;
       color: #000;
       font-weight: bold;
+      font-size: 18px;
     }
 
+    /* Main Section */
     .main {
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
       padding: 80px 20px;
+      flex-wrap: wrap;
     }
 
     .intro {
@@ -58,6 +69,8 @@
 
     .intro p {
       line-height: 1.6;
+      margin-bottom: 10px;
+      font-size: 16px;
       color: #333;
     }
 
@@ -65,13 +78,22 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* replace with your actual image file */
+      background-image: url('your-photo.jpg'); /* Replace with your image filename */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
     }
 
+    /* Responsive Design */
     @media (max-width: 768px) {
+      .logo {
+        font-size: 22px;
+      }
+
+      nav a {
+        font-size: 16px;
+      }
+
       .main {
         flex-direction: column;
         text-align: center;
@@ -83,6 +105,24 @@
 
       .avatar {
         margin: 0 auto;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .logo {
+        font-size: 20px;
+      }
+
+      nav a {
+        font-size: 14px;
+      }
+
+      .intro h1 {
+        font-size: 20px;
+      }
+
+      .intro p {
+        font-size: 14px;
       }
     }
   </style>
