--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
 
-  <!-- Replace this link with your Adobe Fonts embed for Neue Haas Grotesk -->
-  <link rel="stylesheet" href="https://use.typekit.net/xyz123.css"> 
+  <!-- Replace this with your actual Adobe Fonts project link -->
+  <link rel="stylesheet" href="https://use.typekit.net/xyz123.css" />
   <style>
-    /* Global Reset */
+    /* Basic Reset */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -21,34 +21,35 @@
       color: #000;
     }
 
-    /* Header */
     header {
+      background-color: #f5f5f5;
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #f5f5f5;
-      padding: 20px 40px;
       flex-wrap: nowrap;
+      flex-shrink: 0;
     }
 
     .logo {
       font-size: 28px;
       font-weight: bold;
+      white-space: nowrap;
     }
 
     nav {
-      display: flex;
-      gap: 30px;
+      margin-left: auto;
     }
 
     nav a {
+      margin-left: 30px;
       text-decoration: none;
       color: #000;
       font-weight: bold;
       font-size: 18px;
+      white-space: nowrap;
     }
 
-    /* Main Section */
     .main {
       display: flex;
       justify-content: center;
@@ -69,22 +70,21 @@
 
     .intro p {
       line-height: 1.6;
-      margin-bottom: 10px;
       font-size: 16px;
       color: #333;
+      margin-bottom: 10px;
     }
 
     .avatar {
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* Replace with your image filename */
+      background-image: url('your-photo.jpg'); /* Replace with your image file */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
     }
 
-    /* Responsive Design */
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -92,29 +92,7 @@
 
       nav a {
         font-size: 16px;
-      }
-
-      .main {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .intro {
-        margin: 0 0 30px 0;
-      }
-
-      .avatar {
-        margin: 0 auto;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .logo {
-        font-size: 20px;
-      }
-
-      nav a {
-        font-size: 14px;
+        margin-left: 20px;
       }
 
       .intro h1 {
@@ -123,6 +101,35 @@
 
       .intro p {
         font-size: 14px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        padding: 16px 20px;
+      }
+
+      .logo {
+        font-size: 20px;
+      }
+
+      nav a {
+        font-size: 14px;
+        margin-left: 16px;
+      }
+
+      .main {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .intro {
+        margin-right: 0;
+        margin-bottom: 30px;
+      }
+
+      .avatar {
+        margin: 0 auto;
       }
     }
   </style>
