--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact Me</a>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="blogs.html">Blog</a>
+      <a href="contactme.html">Contact Me</a>
     </nav>
   </header>
 
