--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
 
-  <!-- Replace with your Adobe Fonts project link for Neue Haas Grotesk -->
-  <link rel="stylesheet" href="https://use.typekit.net/xyz123.css" />
   <style>
+    /* Global styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -15,12 +14,12 @@
     }
 
     body {
-      font-family: "neue-haas-grotesk-display", sans-serif;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-weight: bold;
       background-color: #fff;
       color: #000;
     }
 
-    /* Header */
     header {
       display: flex;
       justify-content: space-between;
@@ -28,47 +27,48 @@
       padding: 20px 40px;
       background-color: #f5f5f5;
       flex-wrap: nowrap;
-      white-space: nowrap;
     }
 
     .logo {
       font-size: 28px;
-      font-weight: bold;
-      flex-shrink: 0;
+      white-space: nowrap;
     }
 
     nav {
       display: flex;
       gap: 30px;
-      justify-content: flex-end;
-      flex-shrink: 1;
-      overflow-x: auto;
+      white-space: nowrap;
     }
 
     nav a {
       text-decoration: none;
       color: #000;
-      font-weight: 600;
       font-size: 18px;
     }
 
-    /* Main Section */
+    /* Main layout */
     .main {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 80px 20px;
+      padding: 60px 20px;
       flex-wrap: wrap;
-      background: url('Untitled presentation.jpg') no-repeat center center / cover;
-      min-height: calc(100vh - 100px);
+    }
+
+    .avatar {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      background-image: url('your-photo.jpg'); /* Replace with your image file */
+      background-size: cover;
+      background-position: center;
+      background-color: #ccc;
+      margin-bottom: 30px;
     }
 
     .intro {
-      max-width: 500px;
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 20px;
-      border-radius: 8px;
-      margin-right: 50px;
+      max-width: 600px;
+      text-align: center;
     }
 
     .intro h1 {
@@ -77,22 +77,11 @@
     }
 
     .intro p {
-      line-height: 1.6;
       font-size: 16px;
-      margin-bottom: 10px;
+      line-height: 1.6;
     }
 
-    .avatar {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* Replace this with your own image */
-      background-size: cover;
-      background-position: center;
-      background-color: #ccc;
-    }
-
-    /* Responsive behavior */
+    /* Responsive adjustments */
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -110,42 +99,24 @@
         font-size: 14px;
       }
 
-      .main {
-        flex-direction: column;
-        text-align: center;
-        background-position: top center;
-      }
-
-      .intro {
-        margin: 0 0 30px 0;
-      }
-
-      .avatar {
-        margin: 0 auto;
-      }
-
       header {
-        flex-wrap: nowrap;
-      }
-
-      nav {
-        flex-shrink: 1;
-        overflow-x: auto;
+        padding: 16px 20px;
       }
     }
 
     @media (max-width: 480px) {
-      header {
-        padding: 16px 20px;
-      }
-
       .logo {
         font-size: 20px;
       }
 
       nav a {
         font-size: 12px;
-        margin-left: 16px;
+        gap: 16px;
+      }
+
+      .main {
+        flex-direction: column;
+        padding-top: 40px;
       }
     }
   </style>
@@ -163,12 +134,11 @@
   </header>
 
   <main class="main">
+    <div class="avatar"></div>
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
-      <p>I am an engineer passionate about solving real-world problems through technology, design, and innovation.</p>
-      <p>Feel free to explore my work, thoughts, and how to get in touch.</p>
+      <p>I’m an engineer passionate about building, analyzing, and optimizing. This site showcases my work, ideas, and things I’m proud of creating.</p>
     </div>
-    <div class="avatar"></div>
   </main>
 
 </body>
