--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Raymond Lim - Engineering Portfolio</title>
 
   <style>
-    /* Global styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -26,18 +25,21 @@
       align-items: center;
       padding: 20px 40px;
       background-color: #f5f5f5;
-      flex-wrap: nowrap;
+      white-space: nowrap;
+      overflow-x: auto;
     }
 
     .logo {
       font-size: 28px;
-      white-space: nowrap;
+      flex-shrink: 0;
     }
 
     nav {
       display: flex;
       gap: 30px;
-      white-space: nowrap;
+      justify-content: flex-end;
+      margin-left: auto;
+      flex-wrap: nowrap;
     }
 
     nav a {
@@ -46,29 +48,19 @@
       font-size: 18px;
     }
 
-    /* Main layout */
     .main {
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-wrap: wrap-reverse;
       padding: 60px 20px;
-      flex-wrap: wrap;
-    }
-
-    .avatar {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* Replace with your image file */
-      background-size: cover;
-      background-position: center;
-      background-color: #ccc;
-      margin-bottom: 30px;
+      min-height: calc(100vh - 100px);
     }
 
     .intro {
-      max-width: 600px;
-      text-align: center;
+      max-width: 500px;
+      flex: 1;
+      padding: 20px;
     }
 
     .intro h1 {
@@ -81,7 +73,20 @@
       line-height: 1.6;
     }
 
-    /* Responsive adjustments */
+    .avatar {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      background-image: url('your-photo.jpg'); /* Replace with your image file */
+      background-size: cover;
+      background-position: center;
+      background-color: #ccc;
+      flex-shrink: 0;
+      margin-left: 40px;
+      margin-bottom: 20px;
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -89,6 +94,17 @@
 
       nav a {
         font-size: 14px;
+        gap: 16px;
+      }
+
+      .main {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .avatar {
+        margin: 0 0 20px 0;
       }
 
       .intro h1 {
@@ -99,24 +115,27 @@
         font-size: 14px;
       }
 
-      header {
-        padding: 16px 20px;
+      nav {
+        gap: 18px;
       }
     }
 
     @media (max-width: 480px) {
+      header {
+        padding: 16px 20px;
+      }
+
       .logo {
         font-size: 20px;
       }
 
       nav a {
         font-size: 12px;
-        gap: 16px;
+        margin-left: 10px;
       }
 
-      .main {
-        flex-direction: column;
-        padding-top: 40px;
+      nav {
+        gap: 12px;
       }
     }
   </style>
@@ -134,11 +153,11 @@
   </header>
 
   <main class="main">
-    <div class="avatar"></div>
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
-      <p>I’m an engineer passionate about building, analyzing, and optimizing. This site showcases my work, ideas, and things I’m proud of creating.</p>
+      <p>I am an engineer passionate about solving real-world problems with technical creativity and precision. This portfolio showcases my experience, projects, and passion.</p>
     </div>
+    <div class="avatar"></div>
   </main>
 
 </body>
