--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
-
   <style>
     * {
       box-sizing: border-box;
@@ -15,10 +14,11 @@
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-weight: bold;
-      background-color: #fff;
-      color: #000;
+      background-color: #ffffff;
+      color: #000000;
     }
 
+    /* HEADER STYLING */
     header {
       display: flex;
       justify-content: space-between;
@@ -37,9 +37,8 @@
     nav {
       display: flex;
       gap: 30px;
-      justify-content: flex-end;
       margin-left: auto;
-      flex-wrap: nowrap;
+      flex-shrink: 1;
     }
 
     nav a {
@@ -48,13 +47,13 @@
       font-size: 18px;
     }
 
+    /* MAIN SECTION */
     .main {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap-reverse;
       padding: 60px 20px;
-      min-height: calc(100vh - 100px);
     }
 
     .intro {
@@ -77,7 +76,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* Replace with your image file */
+      background-image: url('your-photo.jpg'); /* Replace this with your photo filename */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
@@ -86,7 +85,7 @@
       margin-bottom: 20px;
     }
 
-    /* Responsive */
+    /* TABLET */
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -94,7 +93,37 @@
 
       nav a {
         font-size: 14px;
-        gap: 16px;
+      }
+
+      nav {
+        gap: 20px;
+      }
+
+      .intro h1 {
+        font-size: 20px;
+      }
+
+      .intro p {
+        font-size: 14px;
+      }
+    }
+
+    /* SMARTPHONE */
+    @media (max-width: 480px) {
+      header {
+        padding: 12px 16px;
+      }
+
+      .logo {
+        font-size: 20px;
+      }
+
+      nav {
+        gap: 12px;
+      }
+
+      nav a {
+        font-size: 12px;
       }
 
       .main {
@@ -105,37 +134,6 @@
 
       .avatar {
         margin: 0 0 20px 0;
-      }
-
-      .intro h1 {
-        font-size: 20px;
-      }
-
-      .intro p {
-        font-size: 14px;
-      }
-
-      nav {
-        gap: 18px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        padding: 16px 20px;
-      }
-
-      .logo {
-        font-size: 20px;
-      }
-
-      nav a {
-        font-size: 12px;
-        margin-left: 10px;
-      }
-
-      nav {
-        gap: 12px;
       }
     }
   </style>
@@ -155,7 +153,7 @@
   <main class="main">
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
-      <p>I am an engineer passionate about solving real-world problems with technical creativity and precision. This portfolio showcases my experience, projects, and passion.</p>
+      <p>I’m an engineer passionate about problem-solving, design, and precision. Explore this portfolio to see my work and journey.</p>
     </div>
     <div class="avatar"></div>
   </main>
