--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="contactme.html">Contact</a>
     </nav>
   </header>
 
