--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* Replace this with your photo filename */
+      background-image: url('profilepicture.jpg'); /* Replace this with your photo filename */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
