--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-weight: bold;
-      background-color: #ffffff;
-      color: #000000;
+      background-color: #fff;
+      color: #000;
     }
 
-    /* HEADER STYLING */
+    /* Header */
     header {
       display: flex;
       justify-content: space-between;
@@ -47,19 +47,20 @@
       font-size: 18px;
     }
 
-    /* MAIN SECTION */
+    /* Main Layout */
     .main {
       display: flex;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
-      flex-wrap: wrap-reverse;
+      gap: 40px;
       padding: 60px 20px;
+      flex-wrap: nowrap;
     }
 
     .intro {
       max-width: 500px;
       flex: 1;
-      padding: 20px;
     }
 
     .intro h1 {
@@ -76,16 +77,14 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profilepicture.jpg'); /* Replace this with your photo filename */
+      background-image: url('profilepicture.jpg'); /* Replace with your photo */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
       flex-shrink: 0;
-      margin-left: 40px;
-      margin-bottom: 20px;
     }
 
-    /* TABLET */
+    /* Tablet */
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -108,7 +107,7 @@
       }
     }
 
-    /* SMARTPHONE */
+    /* Mobile */
     @media (max-width: 480px) {
       header {
         padding: 12px 16px;
@@ -128,12 +127,11 @@
 
       .main {
         flex-direction: column;
-        align-items: center;
         text-align: center;
       }
 
       .avatar {
-        margin: 0 0 20px 0;
+        margin-bottom: 20px;
       }
     }
   </style>
@@ -144,8 +142,6 @@
     <div class="logo">Raymond Lim</div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="contactme.html">Contact</a>
     </nav>
   </header>
 
