--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
+
+  <!-- Font Awesome for social icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <style>
     * {
       box-sizing: border-box;
@@ -18,7 +22,6 @@
       color: #000;
     }
 
-    /* Header */
     header {
       display: flex;
       justify-content: space-between;
@@ -47,7 +50,6 @@
       font-size: 18px;
     }
 
-    /* Main Layout */
     .main {
       display: flex;
       flex-direction: row;
@@ -71,6 +73,7 @@
     .intro p {
       font-size: 16px;
       line-height: 1.6;
+      margin-bottom: 30px;
     }
 
     .avatar {
@@ -84,7 +87,38 @@
       flex-shrink: 0;
     }
 
-    /* Tablet */
+    /* SOCIAL BOXES */
+    .social-container {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      flex-wrap: nowrap;
+    }
+
+    .social-box {
+      flex: 1;
+      min-width: 70px;
+      background-color: #efefef;
+      border-radius: 8px;
+      padding: 10px;
+      text-align: center;
+      transition: background-color 0.2s;
+    }
+
+    .social-box:hover {
+      background-color: #ddd;
+    }
+
+    .social-box i {
+      font-size: 24px;
+      margin-bottom: 8px;
+    }
+
+    .social-box span {
+      display: block;
+      font-size: 14px;
+    }
+
     @media (max-width: 768px) {
       .logo {
         font-size: 22px;
@@ -105,9 +139,16 @@
       .intro p {
         font-size: 14px;
       }
+
+      .social-box i {
+        font-size: 20px;
+      }
+
+      .social-box span {
+        font-size: 12px;
+      }
     }
 
-    /* Mobile */
     @media (max-width: 480px) {
       header {
         padding: 12px 16px;
@@ -133,6 +174,19 @@
       .avatar {
         margin-bottom: 20px;
       }
+
+      .social-container {
+        flex-direction: row;
+        gap: 6px;
+      }
+
+      .social-box i {
+        font-size: 18px;
+      }
+
+      .social-box span {
+        font-size: 11px;
+      }
     }
   </style>
 </head>
@@ -149,7 +203,27 @@
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
       <p>I’m an engineer passionate about problem-solving, design, and precision. Explore this portfolio to see my work and journey.</p>
+
+      <div class="social-container">
+        <a href="https://instagram.com/raymond_oscar" target="_blank" class="social-box">
+          <i class="fab fa-instagram"></i>
+          <span>Instagram</span>
+        </a>
+        <a href="https://instagram.com/kreatif3d.id" target="_blank" class="social-box">
+          <i class="fab fa-instagram"></i>
+          <span>Kreatif 3D</span>
+        </a>
+        <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
+          <i class="fab fa-linkedin"></i>
+          <span>LinkedIn</span>
+        </a>
+        <a href="https://youtube.com/@raymondoscarlim" target="_blank" class="social-box">
+          <i class="fab fa-youtube"></i>
+          <span>YouTube</span>
+        </a>
+      </div>
     </div>
+
     <div class="avatar"></div>
   </main>
 
